lane/v2/svc-consumer.yaml
kind: Service
apiVersion: v1
metadata:
  name: dubbo3-consumer
spec:
  ports:
    - name: http
      protocol: TCP
      port: 9090
      targetPort: 8080
  selector:
    app: dubbo3-consumer
  type: ClusterIP
