lane/v2/dr-consumer.yaml
apiVersion: networking.istio.io/v1beta1
kind: DestinationRule
metadata:
  name: dubbo-consumer
  annotations:
    argocd.argoproj.io/sync-wave: "1"
spec:
  host: dubbo3-consumer
  subsets:
    - labels:
        version: v1
      name: v1
    - labels:
        version: v2
      name: v2
    - labels:
        version: v3
      name: v3
  trafficPolicy:
    connectionPool:
      http:
        maxRetries: 3
